syntax = "proto3";
package bff;

option go_package = "bff/;bffpb";

//API: 用户删除账号
message C2SAccountDel {}
message S2CAccountDel {}

//登录验证
message C2SAuth {//test
  string token = 2; //TOKEN
  string openid = 3; //玩家唯一ID
  int32 visitor = 4; //_是否游客	[0:玩家,1:游客]
  string version = 5; //游戏的大版本号
  string machine_code = 6;
  string time_span = 7;
  string app_version = 8; //这个版本无用
  string message_id = 9;
  string os_type = 10; // 1:安卓 2:ios
  string ip = 11; //IP
  string country_code = 12; //国家代码
  string country = 13; //国家
  string province = 14; //省份
  string city = 15; //城市
  string brand = 16; //手机型号
  string network = 17; //手机网络
  string language = 18; //手机系统语言
  string res_version = 19; //热更的小版本号
}

message S2CAuth {
  int32 ret = 1;
  int64 uid = 2; //UID
  int64 sys_time = 4; // 服务器系统时间(s)
  bool player_exist = 6; // 是否存在角色
  string rmd_name = 7; // 如果不存在角色后的推荐角色名
  string token = 8; //游戏 TOKEN
  bool is_blocked = 9; // 是否被封禁
  int64 blocked_duration = 10; // 封禁剩余时间(秒), 0代表永久封禁
  string blocked_reason = 11; // 封禁原因
  int32 guide_step = 12; //新手引导完成步骤
  int32 guide_step_pet = 13; //宠物引导完成步骤  -1:需要引导 >0:已引导步骤
  int32 guide_step_boss = 14; //boss战引导完成步骤  -1:需要引导 >0:已引导步骤
  int32 guide_step_play = 15; //玩法引导完成步骤  -1:需要引导 >0:已引导步骤
}

//API: 用户绑定注册
message C2SUserBindReg {//test
  string token = 1; //UMS TOKEN
  string openid = 2; //UMS 玩家唯一ID
  string version = 3; //_版本号
  string machine_code = 4;
  string time_span = 5;
  string app_version = 6;
  string message_id = 7;
}
message S2CUserBindReg {
  int32 code = 1;
  string error = 2;
  string token = 3; //游戏 TOKEN
}

//心跳
message C2SHeartbeat {
  string params = 1; // 参数
}

message S2CHeartbeat {
  int32 sys_time = 1; // 服务器系统时间(s)
  string params = 2; // 参数
}

// Blocked details
message BlockedDetail {
  int64 start = 1; // 开始时间
  int64 end = 2; // 结束时间 (0代表永久封禁)
  string reason = 3; // 封禁原因
  int32 ban_type = 4; // 封禁类型(1:禁言 2:账号封禁 3:重复登陆 4:被踢下线)
}

//Blocked notification
message NtfBlocked {
  BlockedDetail details = 1;
}

//登出
message C2SLogoff {
  int64 uid = 1; //角色唯一ID
}

message S2CLogoff {
  int32 ret = 1;
}

// GM 指令
message C2SBffGMCommand {
  string command = 1; // 指令
}

message S2CBffGMCommand {
  string error = 1; // 错误信息
}

//拉取队员到队长大厅 结构同S2CGetRoomInfo
message NtfPullMember{
  string room_host = 1; // 房间地址
  string room_id = 2; // 房间id
  int32 room_type = 3; //房间类型 0:世界 1:战斗 3:
  string room_token = 4; //战斗房间token
  int32 play_id = 5; //玩法ID
  int32 map_id = 6; //地图ID
  int32 reason = 7;//拉取原因 101=组队拉取
}
