syntax = "proto3";
package gm.pb;

option go_package = "gm/api;pb";
message SendMailRequest {
  string data = 1;
  string sign = 2;
}
message MailSendData {
  string channel_range = 1; // channel range (1:全部渠道,2:指定渠道)
  string channel_id = 2; // channel id
  string send_type = 3; // send type (1:全服发送,2:玩家发送)
  string platform_id = 4; // platform id
  string server_id = 5; // server id
  string level_type = 6; // level type (1:全部等级,2:限定等级)
  string level_start = 7; // level start
  string level_end = 8; // level end
  string role_id = 9; // role id
  string sender = 10; // sender
  string title = 11; // mail title
  string content = 12; // mail content (country_code:title:content;country_code:title:content;...)
  repeated string items = 13; // mail rewards
  string start_time = 14; // mail start time
  string end_time = 15; // mail end time
  int32 theme_id = 16; // mail theme id
  int64 register_time = 17; // register time (-1: 不限制,0:当前时间,>0:指定时间)
}

message MailSendResult {
  string user_id = 1;
  string role_name = 2;
}

message SendMailResponse {
  string status = 1; // send status
  string code = 2; // send code
  string info = 3; // send error info
  MailSendResult data = 4; // response result
}
